# scoring_tools

./: .coverage  .dockerignore  .gitignore  31_known_p.ipynb  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  allocation_results.csv  codecov.yml  config.toml  coverage.xml  dashboard.py  docker-compose.yml  error_log.txt  interactive_allocator.py  main.py  pyproject.toml  requirements.txt  run_allocation.py  run_batch.py  run_score_metrics.py  segments.toml  test_fixes.py  test_mr_cutoff.py  test_mr_cutoff2.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker-publish.yml  scheduled.yml
assets/: custom.css
data/: optimal_solution.csv
models/: todu_model.joblib
models/model_20260125_174627/: features.txt  metadata.json  model.pkl  model_summary.txt
src/: __init__.py  alerts.py  audit.py  config.py  consolidation.py  constants.py  data_manager.py  data_quality.py  estimators.py  global_optimizer.py  inference.py  inference_optimized.py  metrics.py  models.py  mr_pipeline.py  optimization_utils.py  optuna_tuning.py  persistence.py  plots.py  preprocess_improved.py  reject_inference.py  reporting.py  schema.py  sensitivity.py  stability.py  styles.py  trends.py  utils.py
src/pipeline/: config_loader.py  inference.py  optimization.py  preprocessing.py  reporting.py
src/scoring_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/templates/: consolidated_report.html  segment_report.html
tests/: conftest.py  test_alerts.py  test_audit.py  test_consolidation.py  test_data_quality.py  test_estimators.py  test_global_optimizer.py  test_integration.py  test_metrics.py  test_models.py  test_mr_pipeline.py  test_optimization_utils.py  test_optuna_tuning.py  test_persistence.py  test_plots.py  test_preprocessing.py  test_reject_inference.py  test_reporting.py  test_schema.py  test_sensitivity.py  test_shap.py  test_stability.py  test_trends.py  test_utils.py  test_validation.py  verify_plots.py
