[project]
name = "scoring-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "tqdm>=4.0.0",
    "ipython>=8.0.0",
    "loguru>=0.7.0",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "ipywidgets>=8.1.8",
    "colorama>=0.4.6",
    "scikit-learn>=1.8.0",
    "joblib>=1.3.2",
    "dash>=2.15.0",
    "dash-bootstrap-components>=1.5.0",
    "tomli-w>=1.2.0",
    "pydantic>=2.0.0",
    "pandera>=0.29.0",
    "shap>=0.49.1",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "optuna>=3.6.0",
]

[project.optional-dependencies]
ga = ["pymoo>=0.6.0"]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary operator instead of if-else
    "C408",   # unnecessary dict() call - common in Plotly code for readability
    "SIM102", # collapsible if statements - sometimes less readable
    "SIM105", # use contextlib.suppress - explicit try/except is clearer
    "B905",   # zip without strict - Python 3.10+ only, backward compat
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
